fixing alignment of block in intro for mobile

--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -71,9 +71,10 @@
 		background-color $white
 		display block
 		position sticky
-		top 15vh
+		top 2vh
 		+mq('bp-3')
 			padding 2rem 3rem
+      top 15vh
 		&.is-hidden
 			display none
 		&_image
